_includes/main.css
/* ... */
.highlight .nb {
  color: #0086b3;
}
.highlight .nc {
  color: #458;
  font-weight: bold;
}
.highlight .no {
  color: #008080;
}
.highlight .ni {
  color: #800080;
}
.highlight .ne {
  color: #900;
  font-weight: bold;
}
.highlight .nf {
  color: #900;
  font-weight: bold;
}
.highlight .nn {
  color: #555;
}
.highlight .nt {
  color: #000080;
}
.highlight .nv {
  color: #008080;
}
.highlight .ow {
  font-weight: bold;
}
.highlight .w {
  color: #bbb;
}
.highlight .mf {
  color: #099;
}
.highlight .mh {
  color: #099;
}
.highlight .mi {
  color: #099;
}
.highlight .mo {
  color: #099;
}
.highlight .sb {
  color: #d14;
}
.highlight .sc {
  color: #d14;
}
.highlight .sd {
  color: #d14;
}
.highlight .s2 {
  color: #d14;
}
.highlight .se {
  color: #d14;
}
.highlight .sh {
  color: #d14;
}
.highlight .si {
  color: #d14;
}
.highlight .sx {
  color: #d14;
}
.highlight .sr {
  color: #009926;
}
.highlight .s1 {
  color: #d14;
}
.highlight .ss {
  color: #990073;
}
.highlight .bp {
  color: #999;
}
.highlight .vc {
  color: #008080;
}
.highlight .vg {
  color: #008080;
}
.highlight .vi {
  color: #008080;
}
.highlight .il {
  color: #099;
}
.highlight .gc {
  color: #999;
  background-color: #eaf2f5;
}
body,
html {
  font-size: 62.5%;
}
body {
  line-height: 1;
  font: 16px "Helvetica Neue", Helvetica, Arial, sans-serif;
}
color alpha {
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
}
h1,
h2,
h3,
h4 {
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  color: #222;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
}
h1 {
  font-size: 3rem;
  letter-spacing: -1px;
  color: #222;
  font-weight: 700;
}
h2 {
  font-size: 2.2rem;
}
h3 {
  font-size: 2rem;
}
h4 {
  font-size: 1.6rem;
}
a {
  color: #3399ff;
  text-decoration: none;
}
p {
  line-height: 1.7;
  color: #666;
  font-weight: 300;
  margin-bottom: 20px;
  letter-spacing: 0.4px;
}
@media only screen and (max-width: 400px) {
  p {
    letter-spacing: 0.2px;
  }
}
strong {
  font-weight: 400;
  color: #000;
}
ul li,
ol li {
  line-height: 2.4rem;
  font-weight: 300;
  color: #666;
}
img,
pre,
iframe {
  max-width: 100%;
}
img,
pre {
  border-radius: 4px;
}
figcaption {
  position: relative;
  top: -20px;
  left: 0;
  right: 0;
  margin: 0 auto;
  width: 100%;
  text-align: center;
  font-size: 1.3rem;
  color: #aaa;
  font-weight: 300;
}
@media only screen and (max-width: 400px) {
  figcaption {
    font-size: 1.2rem;
  }
}
blockquote {
  padding-left: 15px;
  border-left: 3px solid #eee;
}
hr {
  border: none;
  height: 1px;
  margin: 40px auto;
  background: #eee;
  width: 100%;
}
figure.highlight {
  width: 100%;
  margin: 0;
}
.highlight .highlight {
  border: solid;
}

code,
tt {
  padding: 1px 3px;
  font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
  font-size: 13px;
  line-height: 20px;
  background: #fff;
  border: none;
  color: #cc0000
}
pre {
  border: none;
  margin: 0 0 1.75em 0;
  width: 100%;
  padding: 5px 10px;
  font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
  font-size: 1.2rem;
  line-height: 2rem;
  overflow: auto;
  background: #fff;
}
.wrapper-normal,
.wrapper-large {
  height: 100%;
  width: 96%;
  margin: 0 auto;
}
@media only screen and (max-width: 400px) {
  .wrapper-normal,
  .wrapper-large {
    width: 88%;
  }
}
@media only screen and (min-width: 400px) and (max-width: 1050px) {
  .wrapper-normal,
  .wrapper-large {
    width: 88%;
  }
}
.wrapper-normal {
  max-width: 560px;
}
.wrapper-large {
  max-width: 810px;
}
.text-center {
  text-align: center;
}
.clearfix:before,
.clearfix:after {
  content: "";
  display: table;
}
.clearfix:after {
  clear: both;
}
.animated {
  -webkit-animation: fade-in-down 0.6s;
          animation: fade-in-down 0.6s;
  -webkit-animation-delay: 0.3s;
          animation-delay: 0.3s;
}
@-webkit-keyframes fade-in-down {
  0% {
    opacity: 0;
    -webkit-transform: translateY(-10px);
            transform: translateY(-10px);
  }
  100% {
    opacity: 1;
    -webkit-transform: translateY(0);
            transform: translateY(0);
  }
}
@keyframes fade-in-down {
  0% {
    opacity: 0;
    -webkit-transform: translateY(-10px);
            transform: translateY(-10px);
  }
  100% {
    opacity: 1;
    -webkit-transform: translateY(0);
            transform: translateY(0);
  }
}
.home,
.blog, .write-ups,
.projects {
  margin-top: 75px;
}
.home > .list,
.blog > .list,
.write-ups > .list,
.projects > .list {
  border-top: 1px solid #ededed;
  margin-top: 30px;
  padding-top: 40px;
  position: relative;
}
.home > .list:before,
.blog > .list:before,
.write-ups > .list:before,
.projects > .list:before {
  display: block;
  content: " ";
  width: 7px;
  height: 7px;
  border: #ededed 1px solid;
  position: absolute;
  top: -5px;
  left: 50%;
  margin-left: -5px;
  background: #fff;
  box-shadow: #fff 0 0 0 5px;
  border-radius: 3px;
}
.home > .list > .item,
.blog > .list > .item,
.write-ups > .list > .item,
.projects > .list > .item {
  display: block;
  width: 95%;
  margin: 0 auto;
}
.home > .list > .item > .url,
.blog > .list > .item > .url,
.write-ups > .list > .item > .url,
.projects > .list > .item > .url {
  width: 100%;
  height: 100%;
  display: block;
  padding: 20px 0;
  text-decoration: none;
}
.home > .list > .item > .url > .title,
.blog > .list > .item > .url > .title,
.write-ups > .list > .item > .url > .title,
.projects > .list > .item > .url > .title {
  margin: 0;
  width: 75%;
  font-weight: 500;
  -webkit-transition: all ease-in-out 0.2s;
          transition: all ease-in-out 0.2s;
}
.home > .list > .item:hover > .url > .title,
.blog > .list > .item:hover > .url > .title,
.write-ups > .list > .item:hover > .url > .title,
.projects > .list > .item:hover > .url > .title {
  color: #3399ff;
}
/* ... */

